# recsys-challenge-2024-1st-place

./: README.md
kami/: .gitignore  Dockerfile.cpu  README.md  compose.cpu.yaml  tasks.py
kami/ebrec/evaluation/: __init__.py  metrics_protocols.py
kami/experiments/015_train_third/: config.yaml  run.py
kami/experiments/016_catboost/: run.py
kami/features/: README.md
kami/features/a_additional_feature/: run.py
kami/features/a_base/: run.py
kami/features/a_base_v2/: run.py
kami/features/a_base_v3/: run.py
kami/features/a_click_ranking/: run.py
kami/features/a_click_ratio/: run.py
kami/features/a_click_ratio_multi/: run.py
kami/features/a_click_ratio_multi_v2/: run.py
kami/features/a_modify_time/: run.py
kami/utils/: data.py
kfujikawa/: .gitignore  README.md  pyproject.toml
kfujikawa/notebooks/: 001_getting_started_original.ipynb  002_view_datasets.ipynb  003_view_preprocess_dataset.ipynb
kfujikawa/src/ebrec/models/fastformer/: dataloader.py  fastformer.py  fastformer_fixed.py
kfujikawa/src/ebrec/utils/: _python.py
kfujikawa/src/exp/v0xxx_preprocess/: run.sh  v0001_download_rawdata.py  v0100_articles.py  v0101_article_inviews_in_split.py  v0101_article_inviews_in_split_v2.py  v0102_article_metadata_id_v2.py  v0103_article_history_counts.py  v0200_users.py  v0201_user_inviews_in_split.py  v0300_impressions.py  v0301_imp_counts_per_user.py  v0302_imp_target_in_split.py
kfujikawa/src/exp/v1xxx_training/: run_pl.sh  run_scratch.sh  v1157_111_fix_past_v2.py  v1170_111_L8_128d.py  v1174_111_L8_128d_smpl3_drophist.py  v1184_111_PL_bert_L4_256d.py
kfujikawa/src/exp/v2xxx_ablation/: v2002_001_v1174_use_past.py  v2003_111_v1174_no-drophist.py  v2004_111_v1174_no-imp.py  v2005_111_v1174_no-imp-drophist.py  v2005_111_v1174_no-transformer.py  v2006_111_v1174_no-sample.py  v2007_111_v1174_no-transformer-same-parameter.py
kfujikawa/src/exp/v8xxx_ensemble/: run_ensemble.sh  v8004_015_016_v1170_v1174.py
kfujikawa/src/exputils/: __init__.py  const.py  lightning.py  torch.py  utils.py
kfujikawa/src/scripts/: submission.py
sugawarya/: .gitignore  README.md  pyproject.toml
sugawarya/src/: make_submission.py  stacking.py  utils.py  weighted_mean.py
(+97 files in other folders)
